modify background and upload photo

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141051358-1"></script>
 		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-		gtag('config', 'UA-141051358-1');
+			gtag('config', 'UA-141051358-1');
 		</script>
 	</head>
 	<body class="is-preload">
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo" id="rotateimg90"><img src="images/doggo.JPG" alt="" /></span>
 						<h1>Hey There! I'm Kevin.</h1>
 						<p>I am a full-stack software developer from the Bay Area.<br />
 						You can see my projects here: <a href="https://github.com/k-2tha-brimm">@k-2tha-brimm</a>. Or,<br/>
