--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											<li><a href="https://www.linkedin.com/in/kbrimm/" class="button">Visit My LinkedIn</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span id="rotateimg90" class="image"><img src="./images/paris.JPG" alt="" /></span>
 								</div>
 							</section>
 
