fix issues with border radius

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141051358-1"></script>
 		<script>
@@ -78,8 +79,8 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Go-Chella</h3>
+										<span class=""><img src="./images/dashboard.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
+										<h3><a href="www.brochella.herokuapp.com">Go-Chella</a></h3>
 										<p>A group organizing app centered around major events and conventions, Go-Chella is a
 											full-stack project built using React/Redux on the frontend, and a backend of MongoDB,
 											Node/Express.js, & Axios.
