add media query to fix form

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="https://github.com/k-2tha-brimm" class="button">Want to See My GitHub Yet?</a></li>
+										<li><a href="https://github.com/k-2tha-brimm" class="button">See My GitHub</a></li>
 									</ul>
 								</footer>
 							</section>
