adding go server to handle form validations and submission

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 										might pique my interest? Drop me a line using the form
 										to the right. Or, add me on one of my social media accounts
 										below!</p>
-										<form action="" class="contact">
+										<form action="/" method="POST" class="contact" novalidate>
 											<!-- <label class="input-labels">Name: -->
 												<input type="text" placeholder="Name" style="background-color: white!important; height: 35px; width: 350px">
 											<!-- </label> --><br />
