begin building post functionality for contact form

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 											<!-- </label><br /> --><br />
 											<div class="text-area-container">
 												<!-- <label for="message" class="input-labels">Message:</label> -->
-												<textarea placeholder="Message" style="background-color: white!important"></textarea>
+												<textarea placeholder="Message" value="{{ .Content }}" style="background-color: white!important"></textarea>
 												<br />
 											</div>
 											<button class="contact-button">Send It!</button>
