remove form and add resume download link

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<span class="logo" id="rotateimg90"><img src="images/doggo.JPG" alt="" /></span>
 						<h1>Hey There! I'm Kevin.</h1>
 						<p>I am a full-stack software developer from the Bay Area.<br />
-						You can see my projects here: <a href="https://github.com/k-2tha-brimm">@k-2tha-brimm</a>. Or,<br/>
-						scroll down to learn more about me.</p>
+						You can see my projects here: <a target="_blank" href="https://github.com/k-2tha-brimm">@k-2tha-brimm</a>. Or,<br/>
+						download my <a href="https://docs.google.com/document/d/1e_1juXRK4uDChUJ4xfXkmyS3zUGA9bMccZIFtlmDB0g/export?format=pdf">resume.</a></p>
 					</header>
 
 				<!-- Nav -->
@@ -80,7 +80,7 @@
 								<ul class="features">
 									<li>
 										<span class=""><img src="./images/dashboard.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
-										<h3><a href="www.brochella.herokuapp.com">Go-Chella</a></h3>
+										<h3><a target="_blank" href="http://go-chella.herokuapp.com">Go-Chella</a></h3>
 										<p>A group organizing app centered around major events and conventions, Go-Chella is a
 											full-stack project built using React/Redux on the frontend, and a backend of MongoDB,
 											Node/Express.js, & Axios.
@@ -161,23 +161,19 @@
 									<h2>Want to Get In Touch?</h2>
 									<div class="form-container">
 										<p>Got an exciting project that you think
-										might pique my interest? Drop me a line using the form
-										to the right. Or, add me on one of my social media accounts
+										might pique my interest? Drop me a line here: kev.brimm@gmail.com. Or, add me on one of my social media accounts
 										below!</p>
-										<form action="/" method="POST" class="contact" novalidate>
-											<!-- <label class="input-labels">Name: -->
+										<!-- <form action="/" method="POST" class="contact" novalidate>
 												<input type="text" placeholder="Name" style="background-color: white!important; height: 35px; width: 350px">
-											<!-- </label> --><br />
-											<!-- <label class="input-labels">Email: -->
+												<br />
 												<input type="text" placeholder="Email" style="background-color: white!important; height: 35px; width: 350px">
-											<!-- </label><br /> --><br />
+												<br />
 											<div class="text-area-container">
-												<!-- <label for="message" class="input-labels">Message:</label> -->
 												<textarea placeholder="Message" value="{{ .Content }}" style="background-color: white!important"></textarea>
 												<br />
 											</div>
 											<button class="contact-button">Send It!</button>
-										</form>
+										</form> -->
 									</div>
 								</header>
 							</section>
