add images to projects

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 										</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class=""><img src="./images/kevintv.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
 										<h3>Kevin.Tv</h3>
 										<p>An homage to justin.tv, Kevin.Tv is a full-stack clone of the popular online streaming service Twitch.tv.
 											The backend utilizes Ruby on Rails, a PostgreSQL database, & AJAX, while the frontend leverages React/Redux.
 										</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Invading Your Space</h3>
+										<span class=""><img src="./images/invading_space.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
+										<h3><a target="_blank" href="https://invade-your-space.herokuapp.com/">Invading Space</a></h3>
 										<p>A browser-based retool of the 1978 classic Space Invaders, built using Javascript and HTML5 Canvas.
 											Levels scale in difficulty, and a leaderboard built utilizing Go and MongoDB is currently in the works.
 										</p>
