--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo" id="rotateimg90" ><img src="images/doggo.JPG" alt="" /></span>
+						<span class="logo" ><img src="images/doggo.JPG" alt="" /></span>
 						<h1>Hey There! I'm Kevin.</h1>
 						<p>I am a full-stack software developer from the Bay Area.<br />
 						You can see my projects here: <a target="_blank" href="https://github.com/k-2tha-brimm">@k-2tha-brimm</a>. Or,<br/>
