--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 											<li><a href="https://www.linkedin.com/in/kbrimm/" class="button">Visit My LinkedIn</a></li>
 										</ul>
 									</div>
-									<span id="rotateimg90" class="image"><img src="./images/paris.JPG" alt="" /></span>
+									<span class="image"><img src="./images/paris.JPG" alt="" /></span>
 								</div>
 							</section>
 
