--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<h2>Where to Find Me</h2>
 							<dl class="alt">
 								<dt>Address</dt>
-								<dd>15 Kenneth Rexroth Pl &bull; San Francisco, CA 94133 &bull; USA</dd>
+								<dd>Las Vegas, Nevada</dd>
 								<dt>Phone</dt>
 								<dd>(815) 530-9184</dd>
 								<dt>Email</dt>
