remove links, update about

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 								<ul class="features">
 									<li>
 										<span class=""><img src="./images/dashboard.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
-										<h3><a target="_blank" href="http://go-chella.herokuapp.com">Go-Chella</a></h3>
+										<h3>Go-Chella</h3>
 										<p>A group organizing app centered around major events and conventions, Go-Chella is a
 											full-stack project built using React/Redux on the frontend, and a backend of MongoDB,
 											Node/Express.js, & Axios.
@@ -95,7 +95,7 @@
 									</li>
 									<li>
 										<span class=""><img src="./images/invading_space.png" alt="" width="330" height="220" style="border-radius: 10%; border: 1px solid black"></span>
-										<h3><a target="_blank" href="https://invade-your-space.herokuapp.com/">Invading Space</a></h3>
+										<h3>Invading Space</h3>
 										<p>A browser-based retool of the 1978 classic Space Invaders, built using Javascript and HTML5 Canvas.
 											Levels scale in difficulty, and a leaderboard built utilizing Go and MongoDB is currently in the works.
 										</p>
@@ -147,11 +147,11 @@
 
 								</ul>
 								<p class="content">
-									I have spent the last 2+ years learning an assortment of web technologies, beginning with Ruby
-									on Rails, and expanding outwards from there. I quickly moved on, self-learning Javascript and SQL and over the 
-									last four months have had an opportunity to continue to add to my toolkit by sharpening my abilities
-									with React/Redux. Most recently I began building backends for my projects in Go, a language I intend
-									on continuing to learn, and hope to utilize in my next position.
+									I have spent the last 5 years working as a Software Developer in various capacities. In my role as a UI
+									Engineer for Noodle.ai, I was tasked with building clean and intuitive interfaces using React/Redux, creating
+									pixel-perfect replicas of Figma mocks. Most recently, as a Software Engineer for Benchling, I was tasked
+									with writing E2E tests using Cypress and Typescript, as well as building out Test Infrastructure tools
+									and improving CI/CD testing pipelines using Python.
 								</p>
 							</section>
 
